#![deny(clippy::all)]

[package]
name = "diglish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
#tokio = { version = "1", features = ["full"] }
scraper = "0.14.0"
colored = "2.0.0"
clap = "4.0.32"